--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
               <a href="#about">關於我們</a>
               <a href="#event">最新消息</a>
-              <a href="#menu-list">菜單</a>
+              <a href="#menu-list">Menu</a>
             </div>
             <!-- Use any element to open the sidenav -->
             <span onclick="openNav()" class="pull-right menu-icon">☰</span>
@@ -132,7 +132,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center marb-35">
-            <h1 class="header-h">菜單</h1>
+            <h1 class="header-h">Menu List</h1>
             <p>
                 <p>【拾福青果點餐方式】</p>
                 <p>[第一步驟]二選一<br>
