--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy|Bree+Serif|Candal|PT+Sans">
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/imagehover.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   
   <!-- =======================================================
@@ -120,7 +121,7 @@
     
     <section id="menu-list" class="section-padding">
 
-    
+      <h1 class="header-h">Menu List</h1>
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center marb-35">
@@ -176,7 +177,7 @@
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
-            <h1 class="header-h">Menu List</h1>
+                <h1 style="text-align: center">←&nbsp→</h1>
             <p>
                 <p>【拾福青果點餐方式】</p>
                 <p>[第一步驟]二選一<br>
