--- a/index.html
+++ b/index.html
@@ -125,19 +125,25 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center marb-35">
+            
               <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                    </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="img/01.jpg" alt="First slide" style="height: 80%; width: 80%;">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/02.jpg" alt="Second slide" style="height: 80%; width: 80%;" >
-                        <div class="carousel-caption d-none d-md-block">
+                      <img class="d-block w-100" src="img/02.jpg" alt="First slide" style="height: 80%; width: 80%;">
+                      <div class="carousel-caption d-none d-md-block">
                           <h5>$100</h5>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/03.jpg" alt="Third slide" style="height: 80%; width: 80%;">
+                        <img src="img/03.jpg" alt="Second slide" style="height: 80%; width: 80%;" >
                         <div class="carousel-caption d-none d-md-block">
                           <h5>$110</h5>
                         </div>
