--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="row">
           <div class="col-md-12 text-center marb-35">
             
-              <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="1500">
                   <ol class="carousel-indicators">
                       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
