--- a/index.html
+++ b/index.html
@@ -186,15 +186,15 @@
                 <h1 style="text-align: center">←&nbsp→</h1>
             <p>
                 <p>【拾福青果點餐方式】</p>
-                <p>[第一步驟]二選一<br>
-                  <p>[第二步驟]主風味選擇<br>
+                <p style="color: crimson">[第一步驟]二選一<br>
+                  <p style="color: crimson">[第二步驟]主風味選擇<br></p>
                     (口味不定期更新，如需最新菜單可私訊)<br>
-                    <p>[第三步驟]醬料五選一<br>
+                    <p style="color: crimson">[第三步驟]醬料五選一<br>
                       <p>範例：<br>
                         今天小明想要點餐！他想吃…<br>
                         紅藜飯+蛋白父子檔+檸檬橄欖醬<br>
                         他只需在點菜時說岀或寫岀<br>
-                        ①+③+④<br>
+                        <p style="color: crimson">①+③+④<br></p>
                         即可喔！</p>
           </div>
   
